# keyrings.osx_keychain_keys

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  CHANGES.rst  LICENSE  README.rst  conftest.py  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/workflows/: CD-pre-release.yaml  CD.yml  CI.yml
docs/: conf.py  index.rst  requirements.txt
keyrings/osx_keychain_keys/: backend.py
keyrings/osx_keychain_keys/examples/: backend_example.py
keyrings/osx_keychain_keys/tests/: 3des_encrypted.key  aes_128_encrypted.key  des_encrypted.key  test_keychain_keys.py
