[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = keyrings.osx_keychain_keys
author = Danny Shemesh
author_email = dany74q@gmail.com
description = OSX Keychain backend for key-pairs
long_description = file:README.rst
url = https://github.com/dany74q/keyrings.osx_keychain_keys
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    pyobjc >= 6.2.2
    cryptography >= 3.1
    keyring >= 21.4.0
setup_requires = setuptools_scm >= 4.1.2

[options.packages.find]
exclude = tests

[options.extras_require]
testing =
    pytest >= 6.0.1
    pytest-flake8 >= 1.0.6
    pytest-black >= 0.3.11
    pytest-cov >= 2.10.1

docs =
    sphinx >= 3.2.1
    jaraco.packaging >= 3.2
    rst.linker >= 2.0.0

[options.entry_points]
keyring.backends =
    osx_keychain_keys = keyrings.osx_keychain_keys.backend